--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -11,9 +11,7 @@
 {% for item in news %}
     <div>
         <p><h2><span style="text-decoration: underline;">{{ item.title }}</span></h2></p>
-
-        <p>{{ 'Автор: ' }} {{ item.author }}</p>
-        <p>{{ item.time_in|date:'Y-m-d H:m:s'  }}</p>     <!--        Добавил "автор" для наглядности-->
+        <p>{{ item.time_in|date:'Y-m-d H:m:s'  }}</p>
         <p>{{ item.preview }}</p>
         <a href="{{ item.get_absolute_url }}"><em>Подробнее</em></a>
     </div>
