--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -1,25 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends 'flatpages/default.html' %}
+
+{% load custom_filters %}
+
+{% block title %}
     <title>{{ title }}</title>
-</head>
-<body>
-
-<h1>{{title}}</h1>
-
-{% for item in news %}
-    <div>
-        <p><h2><span style="text-decoration: underline;">{{ item.title }}</span></h2></p>
-
-        <p>{{ 'Автор: ' }} {{ item.author }}</p>
-        <p>{{ item.time_in|date:'Y-m-d H:m:s'  }}</p>     <!--        Добавил "автор" для наглядности-->
-        <p>{{ item.preview }}</p>
-        <a href="{{ item.get_absolute_url }}"><em>Подробнее</em></a>
-    </div>
-    <hr>
-{% endfor %}
+{% endblock %}
 
 
-</body>
-</html>
+{% block content %}
+
+    <h1>{{ title }}</h1>
+
+    {% for item in news %}
+        <div>
+            <p><h2><span style="text-decoration: underline;">{{ item.title|censor }}</span></h2>
+            <p>{{ 'Автор: ' }} {{ item.author }}</p>
+            <p>{{ item.time_in|date:'Y-m-d H:m:s'  }}</p>     <!--        Добавил "автор" для наглядности-->
+            <p>{{ item.text|truncatechars:20|censor }}</p>
+            <a href="{{ item.get_absolute_url }}"><em>Подробнее</em></a>
+        </div>
+        <hr>
+    {% endfor %}
+{% endblock %}
+
