--- a/news/templates/news/post_detail.html
+++ b/news/templates/news/post_detail.html
@@ -1,18 +1,19 @@
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
+
 {% block title %}
-    <title>{{post_item.title}}</title>
+    <title>{{ post_item.title }}</title>
 {% endblock %}
-<body>
+
 {% block content %}
-<h1>{{post_item.title}}</h1>
+<h1>{{ post_item.title|censor }}</h1>
 
     <div>
-        <p>{{ post_item.time_in|date:'Y-m-d H:m:s'  }}</p>
-        <p>{{ post_item.censor  }}</p>
+        <p>{{ post_item.time_in|date:'Y-m-d H:m:s' }}</p>
+        <p>{{ post_item.text|censor }}</p>
         <p>{{ 'Рейтинг: ' }}{{ post_item.vote }}</p>
-        <p>{{ 'Автор: ' }} {{ post_item.author  }}</p>      <!--        Добавил "автор" для наглядности-->
+        <p>{{ 'Автор: ' }} {{ post_item.author }}</p>      <!--        Добавил "автор" для наглядности-->
     </div>
     <hr>
 {% endblock %}
-</body>
